# VALI

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  FindFFmpeg.cmake  PyNvCodec.html  PytorchNvCodec.html  README.md  SampleTorchSegmentation.py  common.cmake  conanfile.py  genindex.html  index.html  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  python_vali.html  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: OnTaggedCommitPush.yml  build_docs.yml  onCommit.yml  onPullRequest.yml  onPushMain.yml  runClangTidy.yml
_generate/: PyNvCodec.CudaBuffer.html  PyNvCodec.GetNumGpus.html  PyNvCodec.GetNvencParams.html  PyNvCodec.PyBufferUploader.html  PyNvCodec.PyCudaBufferDownloader.html  PyNvCodec.PyFFmpegDemuxer.html  PyNvCodec.PyFfmpegDecoder.html  PyNvCodec.PyFrameUploader.html  PyNvCodec.PyNvDecoder.html  PyNvCodec.PyNvEncoder.html  PyNvCodec.PySurfaceConverter.html  PyNvCodec.PySurfaceDownloader.html  PyNvCodec.PySurfaceRemaper.html  PyNvCodec.PySurfaceResizer.html  PyNvCodec.SeekContext.html  PyNvCodec.Surface.html  PyNvCodec.SurfacePlane.html  python_vali.CudaStreamEvent.html  python_vali.GetNumGpus.html  python_vali.GetNvencParams.html  python_vali.PyDecoder.html  python_vali.PyFrameUploader.html  python_vali.PyNvEncoder.html  python_vali.PyNvJpegEncoder.html  python_vali.PySurfaceConverter.html  python_vali.PySurfaceDownloader.html  python_vali.PySurfaceResizer.html  python_vali.PySurfaceRotator.html  python_vali.PySurfaceUD.html  python_vali.SeekContext.html  python_vali.SetFFMpegLogLevel.html  python_vali.Surface.html  python_vali.SurfacePlane.html
_sources/: PytorchNvCodec.rst.txt  index.rst.txt
_sources/_generate/: PyNvCodec.CudaBuffer.rst.txt  PyNvCodec.GetNumGpus.rst.txt  PyNvCodec.GetNvencParams.rst.txt  PyNvCodec.PyBufferUploader.rst.txt  PyNvCodec.PyCudaBufferDownloader.rst.txt  PyNvCodec.PyFFmpegDemuxer.rst.txt  PyNvCodec.PyFfmpegDecoder.rst.txt  PyNvCodec.PyFrameUploader.rst.txt  PyNvCodec.PyNvDecoder.rst.txt  PyNvCodec.PyNvEncoder.rst.txt  PyNvCodec.PySurfaceConverter.rst.txt  PyNvCodec.PySurfaceDownloader.rst.txt  PyNvCodec.PySurfaceRemaper.rst.txt  PyNvCodec.PySurfaceResizer.rst.txt  PyNvCodec.SeekContext.rst.txt  PyNvCodec.Surface.rst.txt  PyNvCodec.SurfacePlane.rst.txt  python_vali.CudaStreamEvent.rst.txt  python_vali.GetNumGpus.rst.txt  python_vali.GetNvencParams.rst.txt  python_vali.PyDecoder.rst.txt  python_vali.PyFrameUploader.rst.txt  python_vali.PyNvEncoder.rst.txt  python_vali.PyNvJpegEncoder.rst.txt  python_vali.PySurfaceConverter.rst.txt  python_vali.PySurfaceDownloader.rst.txt  python_vali.PySurfaceResizer.rst.txt  python_vali.PySurfaceRotator.rst.txt  python_vali.PySurfaceUD.rst.txt  python_vali.SeekContext.rst.txt  python_vali.SetFFMpegLogLevel.rst.txt  python_vali.Surface.rst.txt  python_vali.SurfacePlane.rst.txt
docker/: Dockerfile  Dockerfile.tensorrt
docs/: Makefile  conf.py  python_vali.rst
samples/: get_hw_info.ipynb  sample_decode_from_network.ipynb  sample_decode_show.ipynb  sample_pycuda.ipynb  sample_seek.ipynb  sample_seek_far.ipynb  sample_segmentation_cvcuda_interop.ipynb  sample_transcode.ipynb  sample_transcode.py
src/: CMakeLists.txt  common.cmake
src/PyNvCodec/: CMakeLists.txt  __init__.py  __init__.pyi
src/PyNvCodec.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
src/PyNvCodec/inc/: PyNvCodec.hpp
src/PyNvCodec/src/: PyBufferUploader.cpp  PyCudaBufferDownloader.cpp  PyDecoder.cpp  PyFFMpegDecoder.cpp  PyFFMpegDemuxer.cpp  PyFrameConverter.cpp  PyFrameUploader.cpp  PyNvCodec.cpp  PyNvDecoder.cpp  PyNvEncoder.cpp  PySurface.cpp  PySurfaceConverter.cpp  PySurfaceDownloader.cpp  PySurfaceRemaper.cpp  PySurfaceResizer.cpp
src/TC/: CMakeLists.txt
src/TC/TC_CORE/: CMakeLists.txt
src/TC/TC_CORE/inc/: TC_CORE.hpp
src/TC/TC_CORE/src/: Task.cpp
src/TC/inc/: Buffer.hpp  CodecsSupport.hpp  CudaUtils.hpp  FFmpegDemuxer.h  LibCuda.hpp  LibNpp.hpp  LibNvJpeg.hpp  LibraryLoader.hpp  MemoryInterfaces.hpp  NppCommon.hpp  NvCodecCLIOptions.h  NvCodecUtils.h  NvDecoder.h  NvEncoder.h  NvEncoderCuda.h  ResizeUtils.hpp  Surface.hpp  SurfacePlane.hpp  Surfaces.hpp  Tasks.hpp  Utils.hpp
src/TC/src/: CudaUtils.cpp  LibCuda.cpp  LibNpp.cpp  LibNvJpeg.cpp  LibraryLoader.cpp  MemoryInterfaces.cpp  NppCommon.cpp  NvCodecCliOptions.cpp  ResizeUtils.cu  RotateSurface.cpp  Surface.cpp  SurfacePlane.cpp  Surfaces.cpp  TaskColorCvt.cpp  TaskConvertFrame.cpp  TaskConvertSurface.cpp  TaskCudaDownloadSurface.cpp  TaskCudaUploadFrame.cpp  TaskDecodeFrame.cpp  TaskDemuxFrame.cpp  TaskDownloadCudaBuffer.cpp  TaskFfmpegDecodeFrame.cpp  TaskNvJpegEncode.cpp  TaskNvdecDecodeFrame.cpp  TaskNvencEncodeFrame.cpp  TaskRemapSurface.cpp  TaskResizeSurface.cpp  TaskUploadBuffer.cpp  UDSurface.cpp  Utils.cpp
src/inc/: Common.hpp
src/python_vali/: CMakeLists.txt  __init__.py  __init__.pyi
src/python_vali/inc/: VALI.hpp
src/python_vali/src/: BufferedRandom.cpp  BufferedReader.cpp  PyDecoder.cpp  PyFrameConverter.cpp  PyFrameUploader.cpp  PyNvEncoder.cpp  PyNvJpegEncoder.cpp  PySurface.cpp  PySurfaceConverter.cpp  PySurfaceDownloader.cpp  PySurfaceResizer.cpp  PySurfaceRotator.cpp  PySurfaceUD.cpp  VALI.cpp
tests/: cc_848x464_rgb  detections.json  gt_files.json  test_GpuMem.py  test_MemUsagePyDecoder.py  test_PyDecoder.py  test_PyFFmpegDecoder.py  test_PyFfmpegDemuxer.py  test_PyFrameConverter.py  test_PyNvDecoder.py  test_PyNvEncoder.py  test_PyNvJpegEncoder.py  test_PySurface.py  test_PySurfaceConverter.py  test_PySurfacePlane_GpuMem.py  test_PySurfaceResizer.py  test_PySurfaceRotator.py  test_PySurfaceUD.py  test_TorchSegmentation.py  test_common.py
tests/data/: 640x360_PixelFormat.NV12_PixelFormat.RGB.raw  640x360_PixelFormat.NV12_PixelFormat.RGB_32F.raw  640x360_PixelFormat.NV12_PixelFormat.RGB_32F_PLANAR.raw  640x360_PixelFormat.NV12_PixelFormat.RGB_PLANAR.raw  640x360_PixelFormat.NV12_PixelFormat.YUV444.raw  640x360_PixelFormat.P10_PixelFormat.RGB_32F.raw  pts_test_video.mkv  test_hevc10.mkv  (+9 more)
