[build-system]        
requires = [
  "setuptools>=42",
  "scikit-build",
  "numpy",
  "cmake>=3.21",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project]
name = "VALI"
authors = [{name = "Roman Arzumanyan", email = "roman.arzum@gmail.com"}]
description = "Video processing in Python"
dynamic = ["version", "dependencies", "license", "optional-dependencies", "readme"]